# programs

./: .dockerignore  .gitignore  AGENTS.md  Anchor.toml  Cargo.toml  Dockerfile  README.md  flake.nix  package.json
.git-hooks/: README.md  post-checkout  post-merge  pre-commit  pre-push
.github/: dependabot.yml  labeler.yml  labels.yml
.github/agents/: anchor-engineer.md  solana-architect.md
.github/commands/: audit.md  build.md  deploy.md  test.md
.github/rules/: security.md  testing.md
.github/workflows/: ci.yml  pr-size-labeler.yml  release.yml  sync-to-mono.yml
docs/superpowers/plans/: 2026-03-17-solana-stack-alignment.md
docs/superpowers/specs/: 2026-03-17-solana-stack-alignment-design.md
resq-airspace/: Cargo.toml
resq-airspace/src/: error.rs  lib.rs
resq-airspace/src/instructions/: close_permit.rs  grant_permit.rs  initialize_property.rs  mod.rs  record_crossing.rs  transfer_ownership.rs  update_policy.rs  update_treasury.rs
resq-airspace/src/state/: airspace_account.rs  mod.rs  permit.rs
resq-airspace/tests/: host_init_regression.rs  integration.rs
resq-delivery/: Cargo.toml
resq-delivery/src/: error.rs  lib.rs
resq-delivery/src/instructions/: mod.rs  record_delivery.rs
resq-delivery/src/state/: delivery_record.rs  mod.rs
resq-delivery/tests/: integration.rs
scripts/: setup.sh  test.sh
