# Copyright 2026 ResQ
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[workspace]
resolver = "2"
members = [
  "resq-delivery",
  "resq-airspace",
]

[workspace.lints.rust]
unsafe_code = "warn"

[workspace.dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-client = "0.30.1"
solana-program-test = "3.1"
solana-sdk = "2.3"
tokio = { version = "1", features = ["full"] }

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[patch.crates-io]
solana-invoke = { path = "vendor/solana-invoke" }
