# Copyright 2026 ResQ
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[workspace]
resolver = "2"
members = [
  "resq-delivery",
  "resq-airspace",
]

[workspace.lints.rust]
unsafe_code = "warn"

[workspace.dependencies]
anchor-lang = { version = "1.0.0-rc.2", features = ["init-if-needed"] }
anchor-client = "1.0.0-rc.2"
solana-account-info = "3.1.0"
solana-instruction = "3.2.0"
solana-keypair = "3.1.2"
solana-program-entrypoint = "3.1.1"
solana-program-test = { version = "3.1.10", features = ["agave-unstable-api"] }
solana-pubkey = "4.1.0"
solana-sdk = "4.0.1"
solana-signer = "3.0.0"
solana-system-interface = "3.1.0"
solana-transaction = "3.1.0"
tokio = { version = "1", features = ["full"] }

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[patch.crates-io]
solana-invoke = { path = "vendor/solana-invoke" }
solana-keypair = { path = "vendor/solana-keypair" }
solana-program-test = { path = "vendor/solana-program-test" }
