# Copyright 2026 ResQ
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "resq-airspace"
version = "0.1.0"
edition = "2021"
description = "ResQ Per-Property Airspace Account on-chain program (Solana/Anchor)"

[lib]
crate-type = ["cdylib", "lib"]
name = "resq_airspace"

[features]
default = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { workspace = true }

[dev-dependencies]
solana-account-info = { workspace = true }
solana-instruction = { workspace = true }
solana-keypair = { workspace = true }
solana-program-entrypoint = { workspace = true }
solana-program-test = { workspace = true }
solana-pubkey = { workspace = true }
solana-sdk = { workspace = true }
solana-signer = { workspace = true }
solana-system-interface = { workspace = true }
solana-transaction = { workspace = true }
tokio = { workspace = true }

[lints]
workspace = true
